src/sass/site/_text.scss
.site__title {
  font-family: 'Baloo';
  font-weight: 400;
  font-size: 2.6rem;

  color: v(site-accent, v(site-primary));

  @media (--tablet-10) {
    font-size: 3.3rem;
  }
}

.site__description {
  margin: 1rem 0 4rem;

  @media (--tablet-10) {
    margin-bottom: 7rem;

    font-size: 1.8rem;
  }

  a {
    position: relative;
    z-index: 1;

    color: inherit;
  }
}

